src/objects/RoomDetail__c.object
<CustomObject>
    <fields>
        <fullName>DayofWeek__c</fullName>
        <label>Day of Week</label>
        <picklist>
            <picklistValues>
                <fullName>Mon-Thu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sat - Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sat - PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PriceType__c</fullName>
        <label>Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rental Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering Price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipName>RoomDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <picklist>
            <picklistValues>
                <fullName>On Season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Room Info</label>
    <nameField>
        <displayFormat>RD-{000000000}</displayFormat>
        <label>Room Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Room Price Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>